--- a/src/components/i18n/locales/en/messages.json
+++ b/src/components/i18n/locales/en/messages.json
@@ -41,5 +41,10 @@
     "moveDown": {
       "Move down": ""
     }
+  },
+  "blockIndicator": {
+    "noIndex": {
+      "Indexing": ""
+    }
   }
 }
